--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   geolocator: ^12.0.0
   open_location_code: ^1.0.1
   image_picker: ^1.1.2
+  dropdown_textfield: ^1.1.0
+  flutter_image_compress: ^2.3.0
 
 
 dev_dependencies:
